fixed wrong margins in dot

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -55,7 +55,7 @@
         border-radius: 50%;
         height: auto;
         width: 70%;
-        margin: 0 $spacing-unit / 2;
+        margin: $spacing-unit/2 0;
     }
 
     .social-links {
